src/test/resources/valid/FourBitAdder.vas
// https://rosettacode.org/wiki/Four_bit_adder#Kotlin

class Main is
    this() is
         var i : Integer = 0
         var max : Integer = 16
         while i.Less(max) loop
             var j : Integer = 0
             var ni : Nybble = Nybble(i)
             if i.Equal(ni.toInt()).Not() then
                // TODO: error
             end
             while j.Less(max) loop
                var nj : Nybble = Nybble(j)
                var added : FourBitAdder = FourBitAdder(ni, nj)
                var actual : Integer = added.n.toInt()
                var expected : Integer = i.Plus(j)
                if added.c then
                    if expected.GreaterEqual(max).And(expected.Rem(max).Equal(actual)).Not() then
                        // TODO: error
                    end
                else
                    if expected.Equal(added.n.toInt()).Not() then
                        // TODO: error
                    end
                end
                j = j.Plus(1)
             end
             i = i.Plus(1)
         end

    end
end

class Nybble is
    var digits : Array[Boolean] = Array[Boolean](4)

    this(d3 : Boolean, d2 : Boolean, d1 : Boolean, d0 : Boolean) is
        digits.set(0, d0)
        digits.set(1, d1)
        digits.set(2, d2)
        digits.set(3, d3)
    end

    this(from : Integer) is
        var rem : Integer = from
        var i : Integer = 0
        while rem.Greater(0) loop
            digits.set(i, rem.Rem(2).Equal(1))
            rem = rem.Div(2)
            i = i.Plus(1)
        end
    end

    method toInt() : Integer is
        var res : Integer = 0
        var i : Integer = 0
        var k : Integer = 1
        while i.Less(digits.Length()) loop
            if digits.get(i) then
                res = res.Plus(k)
            end
            i = i.Plus(1)
            k = k.Mult(2)
        end
        return res
    end
end

class Adder is
    var s : Boolean // sum
    var c : Boolean // carry
end

class HalfAdder extends Adder is
    this(a : Boolean, b : Boolean) is
        s = a.Xor(b)
        c = a.And(b)
    end
end

class FullAdder extends Adder is
    this(a : Boolean, b : Boolean, c : Boolean) is
        var h1 : HalfAdder = HalfAdder(a, c)
        var h2 : HalfAdder = HalfAdder(h1.s, b)
        s = h2.s
        c = h1.c.Or(h2.c)
    end
end

class FourBitAdder is
    var n : Nybble
    var c : Boolean

    this(a : Nybble, b : Nybble) is
        var a0 : FullAdder = FullAdder(a.digits.get(0), b.digits.get(0), false)
        var a1 : FullAdder = FullAdder(a.digits.get(1), b.digits.get(1), a0.c)
        var a2 : FullAdder = FullAdder(a.digits.get(2), b.digits.get(2), a1.c)
        var a3 : FullAdder = FullAdder(a.digits.get(3), b.digits.get(3), a2.c)
        n = Nybble(a3.s, a2.s, a1.s, a0.s)
        c = a3.c
    end
end
